# perfora

./: Cargo.toml  README.md  perfora.toml
.github/workflows/: release.yml
src/: app.rs  config.rs  constants.rs  geometry.rs  io_utils.rs  main.rs  model.rs  processing.rs
