[package]
name = "perfora"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
serde = { version = "1", features = ["derive"] }
tiff = "0.10"
toml = "0.8"


[profile.release]
opt-level = 3
strip = "debuginfo"

[profile.release-lto]
inherits = "release"
lto = true
